# deadtrees-upload

./: .gitignore  LICENSE  README.md  pyproject.toml
src/deadtrees_upload/: __init__.py  auth.py  cli.py  dedup.py  display.py  metadata.py  models.py  process.py  prompts.py  template.py  upload.py  validate_geotiff.py  validate_zip.py  validation.py  workflow.py
templates/: metadata_template.csv
tests/: __init__.py  test_all.py  test_metadata.py  test_validation.py
tests/fixtures/: test_no_date.tif  test_partial_date.tif  test_with_date.tif
