[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadtrees-upload"
version = "0.1.0"
description = "CLI tool for batch uploading datasets to deadtrees.earth"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DeadTrees Team", email = "info@deadtrees.earth" },
]
keywords = ["deadtrees", "upload", "cli", "geospatial", "drone", "orthomosaic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "httpx>=0.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "rasterio>=1.3.0",
    "Pillow>=10.0.0",  # For EXIF/GPS extraction from images
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
deadtrees-upload = "deadtrees_upload.cli:app"

[project.urls]
Homepage = "https://deadtrees.earth"
Repository = "https://github.com/Deadwood-ai/deadtrees-upload"

[tool.hatch.build.targets.wheel]
packages = ["src/deadtrees_upload"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
